# xhs-mcp

./: .gitignore  .gitmodules  Dockerfile  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt  test_comments.py
.cursor/rules/: rednode.mdc
aigc-docs/: tiktok_resign_analysis_20240801.md  tioman_diving_guide_from_sg.md  新加坡PR分析报告.md  新加坡找工作终极攻略.md  早醒与盐酸曲唑酮调研报告.md
api/: xhs_api.py
