[project]
name = "xhs-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "browser-cookie3>=0.20.1",
    "fastmcp>=3.0.2",
    "loguru>=0.7.3",
    "mcp[cli]>=1.26.0",
    "openpyxl>=3.1.5",
    "pyexecjs>=1.5.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "retry>=0.9.2",
]
